syntax = "proto3";

package biotracker;

import "video.proto";

message Shutdown {}

enum ComponentType {
  BIOTRACKER_CORE = 0;
  ENTITY_MATCHER = 1;
  FEATURE_DETECTOR = 2;
  RECORDER = 3;
}

message Component {
  string id = 1;
  ComponentType typ = 2;
}

message ComponentMessage {
  string recipient_id = 1;
  oneof content {
    Component registration = 2;
    string config_json = 3;
    string command_json = 4;
  }
}

message Arena {
  uint32 width_cm = 3;
  uint32 height_cm = 4;
}

message VideoInfo {
  string path = 1;
  uint32 width = 3;
  uint32 height = 4;
  uint32 frame_count = 2;
  double fps = 5;
}

message ExperimentState {
  string base_directory = 6;
  Arena arena = 4;
  PlaybackState playback_state = 5;
  RecordingState recording_state = 1;
  uint32 entity_count = 3;
  double target_fps = 2;
  optional VideoInfo video_info = 9;
  repeated Component registered_components = 7;
}
