syntax = "proto3";

package biotracker;

enum PlaybackState {
  PLAYING = 0;
  PAUSED = 1;
  STOPPED = 2;
  EOS = 3;
}

enum RecordingState {
  INITIAL = 0;
  RECORDING = 2;
  FINISHED = 3;
}

message Image {
  string stream_id = 1;
  uint64 timestamp = 2;
  string shm_id = 3;
  uint32 width = 4;
  uint32 height = 5;
}
